Some minor cleanup of the sonar integration test.
+review REVIEW-5170